--- a/src/components/sidebar/sidebar-styles.module.scss
+++ b/src/components/sidebar/sidebar-styles.module.scss
@@ -67,7 +67,7 @@
 }
 
 .content {
-  @extend %verticalScrollBar;
+  @extend %verticalScrollbar;
   max-height: calc(100vh - (#{$sidebar-top-margin} + #{$sidebar-header-height}));
   width: auto;
   position: relative;
